--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "prebuild-ci": "^3.1.0"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "babel-runtime": "^6.26.0",
     "bindings": "^1.5.0",
     "nan": "^2.14.0",
     "pify": "^3.0.0",
